--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">My First App</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">MapMyRun</string>
+    <string name="action_settings">Einstellungen</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_container">ContainerActivity</string>
+    <string name="title_activity_container">Hauptmenü</string>
+    
+    <string name="drawer_open">Menü öffnen</string>
+    <string name="drawer_close">Menü schließen</string>
+    <string name="action_websearch">Web search</string>
+    <string name="app_not_available">Sorry, there\'s no web browser available</string>
+    
+    <string-array name="navigation_array">
+        <item>Live-Tracking</item>
+        <item>Auswertung 1</item>
+        <item>Auswertung 2</item>
+        <item>Auswertung 3</item>
+        <item>Musik-Player</item>
+    </string-array>
 
 </resources>
