--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="button_player_description_play">Wiedergabe</string>
     <string name="button_player_description_next">Nächstes Lied</string>
     
+    
+     <string name="start_new_workout">Live-Tracking starten</string>
+    
     <string name="drawer_open">Menü öffnen</string>
     <string name="drawer_close">Menü schließen</string>
     <string name="action_websearch">Web search</string>
