create listlayout, create onclicklistener, add functionality of switching values (big button still buggy)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,8 @@
     
     <string name="achievements_icon_default">Achievement-Bild</string>
     
+    <string name="icon_default">Standardicon</string>
+    
     <string name="start_new_workout">Live-Tracking starten</string>
     
     <string name="drawer_open">Menü öffnen</string>
